Address PR review feedback: immutability wrappers, Javadoc, deterministic integration assertions (CF-453)
- EventSynchronizationResult stores analyzer-visible unmodifiable wrappers
  around the List.copyOf snapshots so the getters cannot be flagged as
  exposing internal representation.
- EventSignal Javadoc clarifies that the event at the unstable boundary is
  the first evaluated one; arbitrary values are only permitted strictly
  below it.
- EventSynchronizationIntegrationTest asserts the exact deterministic
  matches, counts, unmatched indexes, and metrics of the fixture
  (swing highs lag -11, swing lows lead +9).
- EventSynchronizationExample.DemoResult and run() are package-private.
- Remove an unused local in negativeTolerancesAreRejected.